# finreason

./: .gitignore  NEW_PROJECT_CONTEXT.md  README.md  linkedin_post.txt  pyproject.toml  requirements.txt
configs/: dpo.yaml  eval.yaml  sft.yaml
notebooks/: colab_dpo.ipynb  colab_sft.ipynb
results/: eval_20260614_225343.json  eval_20260619_030647.json
scripts/: deploy_sagemaker.py  evaluate.py  infer.py  prepare_data.py  push_to_hub.py  train_dpo.py  train_sagemaker.py  train_sft.py
serving/: .gitignore  Dockerfile  README.md  pyproject.toml
serving/docs/: CONCEPTS.md  PLAN.md
serving/k8s/: RUNBOOK-k3s.md  deployment.yaml  hpa.yaml  ollama-deployment.yaml  service.yaml  vllm-deployment.yaml
serving/loadtest/: README.md  locustfile.py
serving/model/: README.md  colab_quantize_serve.ipynb  quantize_awq.py  serve.sh  test_endpoint.py
serving/monitoring/: README.md
src/: data_utils.py  eval_utils.py  model_utils.py
