[project]
name = "finreason"
version = "0.1.0"
description = "Financial Reasoning LLM: SFT + DPO alignment pipeline on FinQA"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
dependencies = [
    "accelerate>=0.28.0",
    "bitsandbytes>=0.43.0",
    "datasets>=2.18.0",
    "huggingface-hub>=0.22.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "peft>=0.10.0",
    "pyyaml>=6.0.1",
    "sagemaker>=2.210.0",
    "scipy>=1.12.0",
    "torch>=2.1.0",
    "transformers>=4.40.0",
    "trl>=0.8.6",
    "wandb>=0.16.0",
]
